# qt6.5_music-player

./: BottomView.qml  CMakeLists.txt  DetailFavoritePageView.qml  DetailHistoryPageView.qml  DetailLocalPageView.qml  DetailPlayListPageView.qml  DetailRecommendPageView.qml  DetailSearchPageView.qml  HomeView.qml  IconButton.qml  Main.qml  MainSystemTrayIcon.qml  MusicBannerView.qml  MusicBorderImage.qml  MusicGridLatestView.qml  MusicGridView.qml  MusicIconButton.qml  MusicListView.qml  MusicLyricsView.qml  MusicRoundImage.qml  MusicTextButton.qml  MusicToolButton.qml  PageDetailView.qml  README.md  ToolButton.qml  TopView.qml  http.cpp  http.h  images.qrc  main.cpp
项目材料/文档/: 开发说明文档.docx  用户使用文档.docx
项目材料/演示PPT和视频/: 音乐播放器.pptx
